# Edge-detection

./: .gitignore  README.md  package-lock.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
